[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/utils/health_node/HealthNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/utils/ProgressBar.gd" type="Script" id=3]
[ext_resource path="res://assets/img/characters/kabutogc5.png" type="Texture" id=4]
[ext_resource path="res://scenes/utils/walk_animation_manager/WalkAnimationManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/utils/fct/FCTMgr.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/utils/death_node/DeathNode.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 6.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.231373, 0.729412, 0.0705882, 1 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 28.0

[node name="Kabuto" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )
speed = null
damage = 10.0
cool_down_duration = null

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 4
vframes = 4
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 18 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HeatlhNode" parent="." instance=ExtResource( 2 )]
max_points = 50

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -25.0
margin_top = -40.0
margin_right = 25.0
margin_bottom = -26.0
custom_styles/fg = SubResource( 2 )
step = 0.5
value = 100.0
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )
anims/walk_down = SubResource( 4 )
anims/walk_left = SubResource( 5 )
anims/walk_right = SubResource( 6 )
anims/walk_up = SubResource( 7 )

[node name="FCTMgr" parent="." instance=ExtResource( 6 )]

[node name="DeathNode" parent="." instance=ExtResource( 7 )]

[node name="WalkAnimationManager" parent="." instance=ExtResource( 5 )]

[node name="PathLine" type="Line2D" parent="."]
visible = false
width = 3.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 1 )
shape = SubResource( 8 )
